--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-body, html {
+/* body, html {
   font-size: 0.9rem;
   background: lightcyan
 }
@@ -85,4 +85,4 @@ hr {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
+} */
